k8s/go/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-golang
  labels:
    app: app-golang
spec:
  replicas: 3
  selector:
    matchLabels:
      app: app-golang
  template:
    metadata:
      labels:
        app: app-golang
    spec:
      containers:
        - name: app-golang
          image: xdrdvd/app_golang:latest
          ports:
            - containerPort: 8080
