k8s/go/service.yml
apiVersion: v1
kind: Service
metadata:
  name: go-app-service
spec:
  selector:
    app: go-app-service
  ports:
    - protocol: TCP
      port: 8080
